Fixed: Teasing picture is now covering the view + adding gradiant under the text

--- a/src/app/pages/home/components/teasing/teasing.component.scss
+++ b/src/app/pages/home/components/teasing/teasing.component.scss
@@ -3,23 +3,14 @@
   position: relative;
   overflow: hidden;
 
-  &__without-video {
-    .teasing__info {
-      align-items: center;
-      justify-content: flex-end;
-
-      &__text {
-        max-width: 120rem;
-        p {
-          font-size: 4.2rem;
-          line-height: 1.2;
-        }
-      }
-    }
-  }
-
   &__without-video-img {
     height: auto;
+
+    .teasing__background {
+      &::before {
+        display: none;
+      }
+    }
 
     .teasing__info {
       position: relative;
@@ -37,45 +28,64 @@
     z-index: 5;
 
     &::before {
-      content: '';
-      display: none; //Deactivate for now
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 100;
+      content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        height: 45%;
+        z-index: 10;
     }
 
     &__video {
-      width: 100vw;
-      height: 100vh;
+      opacity: .7;
     }
 
-    iframe, img {
+    &__video,
+    &__img {
       position: absolute;
+      height: 100%;
+      width: 100%;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+    }
+
+    &__video iframe,
+    &__img img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 100%;
+      transform: translate(-50%, -50%);
+      object-fit: cover;
     }
   }
 
   &__info {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    max-width: 120rem;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    z-index: 5;
     gap: 2rem;
     padding: 4rem 0;
     text-align: center;
+    z-index: 15;
 
     &__title {
       margin: 0;
-      font-size: 2.8rem;
+      font-size: 4.2rem;
+      font-weight: 500;
+      line-height: 1.1;
     }
 
     &__text {
