--- a/src/styles/themes/event.scss
+++ b/src/styles/themes/event.scss
@@ -292,7 +292,7 @@
     &__background {
       background: $event-dark;
       &::before {
-        background-image: linear-gradient(to bottom, rgba(red($event), green($event), blue($event), 0.75) 50%, rgba(red($event), green($event), blue($event)));
+        background: linear-gradient(to top, rgba(red($event), green($event), blue($event), 0.75) 50%, rgba(red($event), green($event), blue($event), 0));
       }
     }
     #text {
