--- a/src/styles/themes/express.scss
+++ b/src/styles/themes/express.scss
@@ -292,7 +292,7 @@
     &__background {
       background: $express-dark;
       &::before {
-        background-image: linear-gradient(to bottom, rgba(red($express), green($express), blue($express), 0.75) 50%, rgba(red($express), green($express), blue($express)));
+        background: linear-gradient(to top, rgba(red($express), green($express), blue($express), 0.75) 50%, rgba(red($express), green($express), blue($express), 0));
       }
     }
     #text {
